Fix duplicate time point plotting
Chart refreshing was running multiple times resulting in multiple points at the same time.

--- a/cast-xmr-monitor.html
+++ b/cast-xmr-monitor.html
@@ -18,10 +18,31 @@
 <html>
   <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-deep-purple.css">
-	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-dark-grey.css">
+	<style>
+		.w3-theme-l5 {color:#000 !important; background-color:#f5f7f8 !important}
+		.w3-theme-l4 {color:#000 !important; background-color:#dfe5e8 !important}
+		.w3-theme-l3 {color:#000 !important; background-color:#becbd2 !important}
+		.w3-theme-l2 {color:#000 !important; background-color:#9eb1bb !important}
+		.w3-theme-l1 {color:#fff !important; background-color:#7d97a5 !important}
+		.w3-theme-d1 {color:#fff !important; background-color:#57707d !important}
+		.w3-theme-d2 {color:#fff !important; background-color:#4d636f !important}
+		.w3-theme-d3 {color:#fff !important; background-color:#435761 !important}
+		.w3-theme-d4 {color:#fff !important; background-color:#3a4b53 !important}
+		.w3-theme-d5 {color:#fff !important; background-color:#303e45 !important}
 
+		.w3-theme-light {color:#000 !important; background-color:#f5f7f8 !important}
+		.w3-theme-dark {color:#fff !important; background-color:#303e45 !important}
+		.w3-theme-action {color:#fff !important; background-color:#303e45 !important}
+
+		.w3-theme {color:#fff !important; background-color:#607d8b !important}
+		.w3-text-theme {color:#607d8b !important}
+		.w3-border-theme {border-color:#607d8b !important}
+
+		.w3-hover-theme:hover {color:#fff !important; background-color:#607d8b !important}
+		.w3-hover-text-theme:hover {color:#607d8b !important}
+		.w3-hover-border-theme:hover {border-color:#607d8b !important}	
+	</style>
+	
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
 	
@@ -91,7 +112,6 @@
 			dataTables.push(serverTables);
 		}
 		initChartTable();			
-		interval = setInterval(updateCharts, chartInterval);
 	}		 
 
 	function initChartTable(){
@@ -101,12 +121,14 @@
 	}
 
 	function updateCharts(){
+		console.log("updateCharts");
 		for(var i = 0; i < urls.length; i++){
 			updateChart(i);
 		}
 	}
 
 	function updateChart(index){
+		console.log("updateChart " + index);
 		var url = 'http://' +  urls[index] + ':7777/';
 		var jsonData = getJSON(url, index, errorData);
 	}
@@ -116,6 +138,7 @@
 		xhr.open('GET', url, true);
 		xhr.responseType = 'json';
 		xhr.onload = function() {
+			console.log("getJSON onLoad " + url + " " + index);
 		  var status = xhr.status;
 		  if (status === 200) {
 			callback(null, index, xhr.response);
@@ -135,7 +158,12 @@
 	}
 			   
 	function convertData(index, jsonData) {	
-		// add columns: Type      Label
+		var date = new Date();			
+		var time = new Array();
+		time.push(date.getHours() + (date.getTimezoneOffset() / 60));
+		time.push(date.getMinutes());
+		time.push(date.getSeconds());
+		
 		for(var m = 0; m < metrics.length; m++) {		
 			dataTable = dataTables[index][m];
 			// add each row from json
@@ -145,15 +173,10 @@
 				}
 			});
 			
-			var date = new Date();
-			
 			var valueArray = new Array();
-			var time = new Array();
-			time.push(date.getHours() + (date.getTimezoneOffset() / 60));
-			time.push(date.getMinutes());
-			time.push(date.getSeconds());
 			valueArray.push(time);
 
+			var gpu = 0;
 			jsonData.devices.forEach(function (row) {
 			  var val;
 			  switch( m ){
@@ -162,12 +185,14 @@
 					break;
 				 case 1:
 					val = row.gpu_temperature;
+					console.log("Index:" + index + " GPU:" + gpu + " Time:"+ time + " Temp:" + val);
 					break;
 				 case 2:
 					val = row.gpu_fan_rpm;
 					break;
 				}
 				valueArray.push(val);
+				gpu++;
 			});
 			
 			dataTable.addRow(valueArray);
@@ -295,6 +320,7 @@
 	   }
 	   clearInterval(interval);
 	   interval = setInterval(updateCharts, chartInterval);
+       console.log("setChartInterval(" + chartInterval + ")");		
 	}
 
 	function setNumPoints(selector) {
@@ -317,6 +343,7 @@
  			numPoints = 200;
 		    break;
 		}		
+		console.log("setNumPoints(" + numPoints + ")");		
 	}
 
 	function setTheme(selector) {
